cmake_minimum_required(VERSION 2.6)
project(entropist)
if(WIN32)
   message(STATUS ">>> WIN32 not implemented yet.")
endif(WIN32)
if (UNIX AND APPLE)
   message(STATUS ">>> macOS")
   add_executable(entropist entropist-main.cpp entropist_macos.cpp)
endif(UNIX AND APPLE)

MESSAGE(STATUS "Searching for X11...")
FIND_PACKAGE (X11)
IF(X11_FOUND)
   INCLUDE_DIRECTORIES ( ${X11_INCLUDE_DIR} )
   LINK_LIBRARIES ( ${X11_LIBRARIES} )
   MESSAGE(STATUS " X11_INCLUDE_DIR: " ${X11_INCLUDE_DIR})
   MESSAGE(STATUS " X11_LIBRARIES: " ${X11_LIBRARIES})
ENDIF(X11_FOUND)

IF(UNIX AND NOT APPLE AND X11_FOUND)
   message(STATUS ">>> Linux")
   add_executable(entropist entropist-main.cpp entropist_x11.cpp)
ENDIF(UNIX AND NOT APPLE AND X11_FOUND)
